correct casing so that Image will show

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images\CVImage.jpg" alt="Ryan's profile picture" width="180px"></td>
+      <td><img src="Images\CVImage.jpg" alt="Ryan's profile picture" width="180px"></td>
       <td>
         <h1>Ryan Mudge</h1>
         <p><em>Innovative, goal-orientated <strong><a href="https://www.linkedin.com/in/ryan-mudge-60368b243/">Software Developer</a></strong></em></p>
